# sonic-cli

./: CMakeLists.txt
CMake/: preinst
lib/: CMakeLists.txt  authorization.c  authorization.h  command.c  command.h  config.h  if.c  if.h  rbac.c  rbac.h  str.c  str.h  vty.c  vty.h
vtysh/: CMakeLists.txt  vtysh.c  vtysh.h  vtysh_arp.c  vtysh_bgp.c  vtysh_cmd.c  vtysh_dhcp.c  vtysh_if.c  vtysh_linux.c  vtysh_main.c  vtysh_show.c  vtysh_upgrade.c  vtysh_user.c
